--- a/client/package.json
+++ b/client/package.json
@@ -76,7 +76,8 @@
       ],
       "consistent-return": 0,
       "@typescript-eslint/no-use-before-define": 0,
-      "jsx-a11y/no-static-element-interactions": 0
+      "jsx-a11y/no-static-element-interactions": 0,
+      "undefined": 0
     },
     "parserOptions": {
       "project": [
